# incident_response_autopilot

./: .gitignore  CLAUDE.md  README.md  README_sketch.MD  pyproject.toml
.claude/: settings.json
.claude/agents/: agent-builder.md  langgraph-architect.md  rag-engineer.md
.claude/commands/: new-agent.md  pre-commit.md
.temp/: CLAUDE_orig.md
data/sample_data/: README.md
data/sample_data/incidents/: critical_db_connection_pool.json  critical_kafka_consumer_lag.json  high_etl_pipeline_failure.json  high_keycloak_auth_degradation.json  high_pod_oomkilled.json  low_cdn_cache_miss.json  low_disk_usage_warning.json
data/sample_data/knowledge_base/baseline/: baseline_normal_24h.csv  baseline_thresholds.md  service_baselines.md
data/sample_data/metrics/: inc001_db_connection_pool.csv  inc002_kafka_consumer_lag.csv  inc003_pod_oom.csv  inc004_keycloak_auth.csv  inc005_etl_pipeline.csv  inc006_disk_usage.csv  inc007_cdn_cache.csv
docs/: architecture.md
src/: config.py
src/agents/: diagnosis_agent.py  diagnosis_prompts.py  diagnosis_schema.py  history_agent.py  postmortem_agent.py  postmortem_prompts.py  postmortem_schema.py  response_agent.py  response_prompts.py  response_schema.py  suggestion_agent.py  suggestion_prompts.py  suggestion_schema.py  triage_agent.py  triage_prompts.py  triage_schema.py
src/graph/: routing.py  state.py  workflow.py
src/monitoring/: metrics.py
src/rag/: ingestion.py  retriever.py
tests/: conftest.py  test_agents.py  test_metrics.py  test_rag.py  test_routing.py
ui/: app.py
ui/pages/: metrics.py
(+16 files in other folders)
