[project]
name = "incident-response-autopilot"
version = "0.1.0"
description = "MAS-система автоматической диагностики инцидентов на LangGraph"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "chromadb>=0.5.0",
    "streamlit>=1.40.0",
    "langsmith>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["tests/", "notebooks/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
